monitoring/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: monitoring-ingress
  namespace: monitoring
spec:
  ingressClassName: nginx
  rules:
  - host: prometheus.monitoring.svc.cluster.local
    http:
      paths:
        - pathType: Prefix
          path: "/"
          backend:
            service:
              name: prometheus
              port:
                number: 9090
  - host: grafana.monitoring.svc.cluster.local
    http:
      paths:
        - pathType: Prefix
          path: "/"
          backend:
            service:
              name: grafana
              port:
                number: 3000
